add: DS_PROMETHEUS var

--- a/deployments/grafana/templates/dashboard.yaml
+++ b/deployments/grafana/templates/dashboard.yaml
@@ -1245,6 +1245,20 @@ spec:
             "skipUrlSync": false,
             "sort": 0,
             "type": "query"
+          },
+          {
+            "allowCustomValue": false,
+            "current": {
+              "text": "Prometheus",
+              "value": "88a6f0f9-1ae2-4ca5-9abc-4fceecde18d0"
+            },
+            "label": "Prometheus",
+            "name": "DS_PROMETHEUS",
+            "options": [],
+            "query": "prometheus",
+            "refresh": 1,
+            "regex": "",
+            "type": "datasource"
           }
         ]
       },
