fix: terminal issue in devspaces

--- a/deployments/workspace/templates/devworkspace.yaml
+++ b/deployments/workspace/templates/devworkspace.yaml
@@ -8,7 +8,7 @@ spec:
   routingClass: che
   started: true
   contributions:
-  - name: ide
+  - name: editor
     uri: {{ .Values.devworkspace.devfile }}
   template:
     projects:
