adding attributes section to devworkspace object to attempt terminal fix

--- a/deployments/workspace/templates/devworkspace.yaml
+++ b/deployments/workspace/templates/devworkspace.yaml
@@ -20,3 +20,5 @@ spec:
           revision: {{ .Values.devworkspace.projects.revision }}
     components:
     {{- toYaml .Values.devworkspace.components | nindent 4 }}
+    attributes:
+      controller.devfile.io/storage-type: per-user
