add: volume key

--- a/deployments/workspace/templates/devworkspacetemplate.yaml
+++ b/deployments/workspace/templates/devworkspacetemplate.yaml
@@ -104,6 +104,7 @@ spec:
         path: /checode
     name: che-code-runtime-description
   - name: checode
+    volume: {}
   events:
     postStart:
     - init-che-code-command
