--- a/deployments/rhcl-operator/templates/create-kuadrant-job.yaml
+++ b/deployments/rhcl-operator/templates/create-kuadrant-job.yaml
@@ -29,6 +29,20 @@ subjects:
     name: create-kuadrant
     namespace: {{ .Release.Namespace }}
 ---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: create-kuadrant-namespace-edit
+  namespace: openshift-operators
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: edit
+subjects:
+  - kind: ServiceAccount
+    name: create-kuadrant
+    namespace: {{ .Release.Namespace }}
+---
 apiVersion: v1
 kind: ConfigMap
 metadata:
